objects/MPW_Internal_Guideline_Factor__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used for calculation of Die Form for Internal Chargeout Report</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geometry__c</fullName>
        <label>Geometry</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NON_SPLIT_Corner_Factor__c</fullName>
        <description>NON-SPLIT corner(POR) - Wafer Quantity ​required to be started through GlobalShuttle sales order</description>
        <inlineHelpText>NON-SPLIT corner(POR) - Wafer Quantity ​required to be started through GlobalShuttle sales order</inlineHelpText>
        <label>NON-SPLIT Corner Factor</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SPLIT_Corner_Factor__c</fullName>
        <description>SPLIT corners (FF, SS, SF, FS) - Wafer Quantity&apos; ​required to be started through GlobalShuttle sales order</description>
        <inlineHelpText>SPLIT corners (FF, SS, SF, FS) - Wafer Quantity&apos; ​required to be started through GlobalShuttle sales order</inlineHelpText>
        <label>SPLIT Corner Factor</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MPW Internal Guideline Factor</label>
</CustomObject>